<?xml version="1.0"?>
<package>
  <name>bb8_description</name>
  <version>0.0.0</version>
  <description>The bb8_description package</description>

  <maintainer email="imcmahon01@gmail.com">Ian McMahon</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>

</package>
